src/base/card.css
:host([disabled]) {
  cursor: not-allowed;
}

:host([orientation="horizontal"]) .card {
  flex-direction: row;
}

:host(:not([hideBorder])) .card {
  border: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
}

:host([orientation="horizontal"]) .card-body {
  flex: 1;
}

:host([orientation="horizontal"]) .card-media {
  padding: var(--sgds-padding-xl) var(--sgds-padding-none) var(--sgds-padding-xl) var(--sgds-padding-xl);
}

:host([orientation="horizontal"]) .card-image {
  width: 40%;
}

:host([imagePosition="after"]) .card-image {
  order: 1;
}

:host([orientation="vertical"][imagePosition="after"]) slot[name="image"]::slotted(img) {
  border-radius: calc(var(--sgds-border-radius-md) - var(--sgds-border-width-1));
  border-top-right-radius: var(--sgds-border-radius-none);
  border-top-left-radius: var(--sgds-border-radius-none);
}

:host([orientation="horizontal"][imagePosition="after"]) slot[name="image"]::slotted(img) {
  border-radius: calc(var(--sgds-border-radius-md) - var(--sgds-border-width-1));
  border-top-left-radius: var(--sgds-border-radius-none);
  border-bottom-left-radius: var(--sgds-border-radius-none);
}

:host([orientation="horizontal"]) slot[name="image"]::slotted(img) {
  height: 100%;
  object-fit: cover;
  border-top-right-radius: var(--sgds-border-radius-none);
  border-bottom-left-radius: calc(var(--sgds-border-radius-md) - var(--sgds-border-width-1));
}

:host([orientation="vertical"][imageAdjustment="padding around"]) .card-image {
  margin: var(--sgds-margin-sm) var(--sgds-margin-sm) var(--sgds-padding-none);
}

:host([orientation="vertical"][imageAdjustment="padding around"][imagePosition="after"]) .card-image {
  margin: var(--sgds-margin-none) var(--sgds-margin-sm) var(--sgds-margin-sm);
}

:host([orientation="horizontal"][imageAdjustment="padding around"]) .card-image {
  margin: var(--sgds-margin-sm) var(--sgds-margin-none) var(--sgds-margin-sm) var(--sgds-margin-sm);
}

:host([orientation="horizontal"][imageAdjustment="padding around"][imagePosition="after"]) .card-image {
  margin: var(--sgds-margin-sm) var(--sgds-margin-sm) var(--sgds-margin-sm) var(--sgds-margin-none);
}

:host([orientation][imageAdjustment="padding around"]) slot[name="image"]::slotted(img) {
  border-radius: calc(var(--sgds-border-radius-md) - var(--sgds-border-width-1));
}

:host([orientation="vertical"]:not([imageAdjustment="aspect ratio"])) slot[name="image"]::slotted(img) {
  height: auto;
}

:host([orientation="vertical"][imageAdjustment="aspect ratio"]) slot[name="image"]::slotted(img) {
  object-fit: cover;
}

.card {
  word-wrap: break-word;
  background-clip: border-box;
  background-color: var(--sgds-surface-default);
  border: var(--sgds-border-width-1) solid var(--sgds-border-color-transparent);
  border-radius: var(--sgds-border-radius-md);
  display: flex;
  flex-direction: column;
  height: 100%;
  min-width: 0;
  position: relative;
  box-shadow: none;
  transition: box-shadow 0.3s ease;
}

a.card {
  text-decoration: none;
  color: initial;
}

@media (prefers-reduced-motion: reduce) {
  .card {
    transition: none;
  }
}

.card.disabled {
  opacity: var(--sgds-opacity-50);
  pointer-events: none;
}

a.card:focus {
  outline: 0;
}

a.card:not(.disabled):focus-visible {
  box-shadow: var(--sgds-box-shadow-focus);
}

.card-tinted-bg {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: var(--sgds-opacity-0);
  border-radius: var(--sgds-border-radius-md);
}

.card-image {
  position: relative;
  flex: 1;
}

.card-media {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  padding: var(--sgds-padding-xl) var(--sgds-padding-xl) var(--sgds-padding-none);
  line-height: 0;
}

.card-thumbnail {
  display: flex;
  align-items: center;
  justify-content: center;
  width: var(--sgds-dimension-80);
  height: var(--sgds-dimension-80);
  border-radius: var(--sgds-border-radius-full);
  border: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
}

.card-body {
  display: flex;
  flex-direction: column;
  gap: var(--sgds-gap-xl);
  flex: 1 1 auto;
  color: var(--sgds-body-color-default);
  padding: var(--sgds-padding-xl);
  z-index: 1;
}

.card-header-container {
  display: flex;
  flex-direction: column;
  gap: var(--sgds-gap-sm);
}

.card-header {
  display: flex;
  flex-direction: column;
  gap: var(--sgds-gap-xs);
}

.card-title {
  --sgds-font-size-5: var(--sgds-font-size-4);
  --sgds-font-size-6: var(--sgds-font-size-4);
  --sgds-margin-2-xs: var(--sgds-margin-none);
  --sgds-font-weight-bold: var(--sgds-font-weight-semibold);
  color: var(--sgds-body-color-default);
  font-size: var(--sgds-font-size-4);
  font-weight: var(--sgds-font-weight-semibold);
  margin-bottom: var(--sgds-margin-none);
}

.card-subtitle,
.card-text {
  margin-bottom: var(--sgds-margin-none);
}

slot[name="subtitle"]::slotted(*) {
  --sgds-margin-2-xs: var(--sgds-margin-none);
  --sgds-margin-xs: var(--sgds-margin-none);
  --sgds-font-size-4: var(--sgds-font-size-1);
  --sgds-font-size-5: var(--sgds-font-size-1);
  --sgds-font-size-6: var(--sgds-font-size-1);
  --sgds-font-weight-bold: var(--sgds-font-weight-semibold);
  --sgds-line-height-heading: var(--sgds-line-height-min);
  --sgds-letter-spacing-tight: var(--sgds-letter-spacing-wide);
  color: var(--sgds-color-default);
  font-size: var(--sgds-font-size-1);
  font-weight: var(--sgds-font-weight-semibold);
  letter-spacing: var(--sgds-letter-spacing-wide);
  text-transform: uppercase;
  line-height: var(--sgds-line-height-min);
  margin: var(--sgds-margin-none);
}

slot[name="title"]::slotted(a) {
  --sgds-font-size-2: var(--sgds-font-size-4);
  --sgds-font-weight-regular: var(--sgds-font-weight-semibold);
  color: var(--sgds-link-color-default);
  font-size: var(--sgds-font-size-4);
  font-weight: var(--sgds-font-weight-semibold);
  text-decoration: none !important;
}

slot[name="description"]::slotted(*) {
  color: var(--sgds-color-subtle);
}

slot[name="image"]::slotted(img) {
  width: 100%;
  display: block;
  border-top-left-radius: calc(var(--sgds-border-radius-md) - var(--sgds-border-width-1));
  border-top-right-radius: calc(var(--sgds-border-radius-md) - var(--sgds-border-width-1));
}

slot[name="link"]::slotted(*) {
  margin-top: auto;
  padding-top: var(--sgds-padding-sm);
  font-weight: 700;
}

slot[name="link"]::slotted(a) {
  display: inline-flex;
  gap: var(--sgds-gap-2-xs);
  color: var(--sgds-link-color-default);
  text-decoration: none !important;
  height: auto !important;
}

slot[name="title"]::slotted(a:hover),
slot[name="title"]::slotted(a:focus),
slot[name="link"]::slotted(a:hover),
slot[name="link"]::slotted(a:focus) {
  color: var(--sgds-link-color-emphasis);
}

slot[name="title"]::slotted(a:focus),
slot[name="link"]::slotted(a:focus) {
  outline: 0;
}

slot[name="title"]::slotted(a:focus-visible),
slot[name="link"]::slotted(a:focus-visible) {
  box-shadow: var(--sgds-box-shadow-focus);
}

